<resources>
    <string name="app_name">BMIApp</string>
    <string name="register">Regisztráció</string>
    <string name="login">Belépés</string>
    <string name="password">Jelszó</string>
    <string name="userName">Felhasználónév</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="regisztr_ci">Regisztráció</string>
    <string name="email">Email</string>
    <string name="passwordAgain">Jelszó megerősítése</string>
    <string name="birthDate">Születési Dátum</string>
    <string name="cancel">Mégse</string>
    <string name="yourWeight">A súlyod</string>
    <string name="newData">Új adat hozzáadása</string>
    <string name="logOut">Kijelentkezés</string>
</resources>