<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_below="@id/registerText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_below="@id/userNameEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_below="@id/emailEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/passwordAgainEditText"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_below="@id/passwordEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="@string/passwordAgain"
        android:inputType="textPassword"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/passwordAgainEditText"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:onClick="register"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginStart="30dp"
            android:onClick="cancel"
            />

    </LinearLayout>
</RelativeLayout>